Update tests to use TestFactory.buildVariant